GOTY-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goty-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goty-app
  template:
    metadata:
      labels:
        app: goty-app
    spec:
      containers:
      - name: goty-container
        image: gastonlc/angularapp:1.0.0-dev
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goty-service
spec:
  selector:
    app: goty-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30002
  type: NodePort
