GOTY-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: goty-ingress
  namespace: mi-goty-namespace 
spec: 
  ingressClassName: nginx 
  rules: 
    - host: "gaston.modelodevops.sociuschile.cl" 
      http: 
        paths: 
          - backend: 
              service: 
                name: goty-service 
                port: 
                  number: 80 
            path: / 
            pathType: Prefix
